--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -3,12 +3,12 @@
     <div class="content-section">
         <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}" >
-        <div class="media-body">
-            <h2 class="account-heading">{{ current_user.username }}</h2>
-            <p class="text-secondary">{{ current_user.email }}</p>
+            <div class="media-body">
+                <h2 class="account-heading">{{ current_user.username }}</h2>
+                <p class="text-secondary">{{ current_user.email }}</p>
+            </div>
         </div>
-        </div>
-            <form method="POST" action="">
+            <form method="POST" action="" enctype="multipart/form-data">
                 {{form.hidden_tag()}}
                 <fieldset class = 'form-group'>
                     <legend class="border-bottom mb-4">
@@ -41,10 +41,19 @@
                         {% endif %}
                     </div>
                 </fieldset>
+                    <div class="form-group">
+                        {{form.picture.label()}}
+                        {{form.picture(class="form-control-file")}}
+                        {% if form.picture.errors %}
+                            {% for error in form.picture.errors %}
+                            <span class="text-danger">{{error}}</span></div>
+                            {% endfor %}
+                        {% endif %}
+
+                    </div>
             <div class="form-group">
                 {{form.submit(class="btn btn-outline-info")}}
             </div>
             </form>
-        <!-- FORM HERE -->
     </div>
 {% endblock %}
