--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -14,6 +14,8 @@
           </div>
       </article>
     {% endfor %}
+{% endblock %}
+{% block sidebar %}
     <div class="pagination">
       {% for page_num in posts.iter_pages(left_edge=1, left_current=1, right_edge=1, right_current=2) %}
         {% if page_num %}
