--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -14,10 +14,13 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-md" id="navbar">
             <div class="container">
                 <a class="navbar-brand" href="/">KaziQ</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,12 +30,10 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{url_for('home')}}">Home</a>
                         <a class="nav-item nav-link" href="{{url_for('about')}}">About</a>
-                    </div>
-                    <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{{url_for('new_post')}}">New Post</a>
-                            <a class="nav-item nav-link" href="{{url_for('account')}}">Account</a>
-                            <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
+                        <a class="nav-item nav-link" href="{{url_for('new_post')}}">New Post</a>
+                        <a class="nav-item nav-link" href="{{url_for('account')}}">Account</a>
+                        <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{{url_for('login')}}">Login</a>
                             <a class="nav-item nav-link" href="{{url_for('register')}}">Register</a>
@@ -45,7 +46,7 @@
 
     <main role="main" class="container mt-5 pt-5">
         <div class="row">
-            <div class="col-md-8">
+            <div class="content-container">
                 {% with messages = get_flashed_messages(with_categories = true)%}
                     {% if messages %}
                         {% for  category, message in messages %}
@@ -55,22 +56,53 @@
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
-                {% block content %}{% endblock %}
-            </div>
-            <div class="col-md-4">
-                <aside class="content-section bg-light p-3 rounded">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.</p>
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc.</li>
-                    </ul>
-                </aside>
+
+                <div class="body-content">
+                    <div class="actual-content">
+                        {% block content %}
+
+                            <!-- HTML Content located here -->
+
+                        {% endblock %}
+                    </div>
+                    <div class="sidebar">
+                        {% block sidebar %}
+
+                            <!-- Side bar content located here -->
+
+                        {% endblock %}
+                    </div>
+                </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <p>&copy; 2025 KaziQ</p>
+        </div>
+    </footer>
+
+    <!-- Blurring javascript -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const navbarToggler = document.querySelector('.navbar-toggler');
+            const navbarCollapse = document.querySelector('.navbar-collapse');
+
+            navbarToggler.addEventListener('click', function () {
+                // Toggle the 'navbar-open' class on the body
+                document.body.classList.toggle('navbar-open');
+            });
+
+            // Remove the blur effect when the menu is closed
+            navbarCollapse.addEventListener('hidden.bs.collapse', function () {
+                document.body.classList.remove('navbar-open');
+            });
+
+            navbarCollapse.addEventListener('shown.bs.collapse', function () {
+                document.body.classList.add('navbar-open');
+            });
+        });
+    </script>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
