--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,15 +1,16 @@
 
 {% extends 'layout.html' %}
 {% block content %}
+    <h1>Posts</h1>
     <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+        <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + posts.author.image_file) }}">
         <div class="media-body">
             <div class="article-metadata">
-                <a class="mr-2" href="{{url_for('user_posts', username=post.author.username)}}">{{ post.author.username }}</a>
-                <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+                <a class="mr-2" href="{{ url_for('user_posts', username=posts.author.username) }}">{{ posts.author.username }}</a>
+                <small class="text-muted">{{ posts.date_posted.strftime('%Y-%m-%d') }}</small>
             </div>
-            <h2 class="article-title">{{ post.title }}</h2>
-            <p class="article-content">{{ post.content }}</p>
+            <h2><a class="article-title" href="{{ url_for('post', post_id=posts.id) }}">{{ posts.title }}</a></h2>
+            <p class="article-content">{{ posts.content }}</p>
         </div>
     </article>
 {% endblock %}
