--- a/flaskblog/templates/user_posts.html
+++ b/flaskblog/templates/user_posts.html
@@ -2,6 +2,8 @@
 {% extends 'layout.html' %}
 {% block content %}
     <h1 class="mb-3">Posts by {{user.username}}({{posts.total}})</h1>
+    <a href="{{ url_for('private_chat', user_id=user.id) }}">Chat with me</a>
+
     {% for post in posts.items%}
 
       <article class="media content-section">
