--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -44,9 +44,28 @@ body {
     height: 80px;
     border-radius:8px;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-    margin:auto;
     margin-top: 0;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 
+  }
+
+  #navbar-nav{
+    width:100%;
+    display:flex;
+    justify-content:space-around;
+    align-items:end;
+    margin-top:-5px;
+
+  }
+
+  .navbar-nav .account-img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
+    margin-bottom:-5px;
   }
 
   .navbar-nav{
@@ -77,6 +96,8 @@ body {
     font-style: normal;
     color: #011638;
     width:150px;
+    text-align:center;
+
   }
 
   .navbar-toggler{
@@ -262,6 +283,10 @@ footer{
   position:fixed;
   bottom:0;
   text-shadow: 2px 2px 4px #011638;
+}
+
+.profile-img{
+
 }
 
 .sidebar {
