--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -51,6 +51,7 @@ body {
 
   }
 
+  /* the navigation bar styling is here */
   #navbar-nav{
     width:100%;
     display:flex;
@@ -118,7 +119,6 @@ body {
     background-color:#011638;
     transform:background-color 0.3s;
     border:none;
-
   }
 
   .navbar-toggler-icon::before {
@@ -126,16 +126,15 @@ body {
       display: block;
       width: 20px;
       height: 2px;
-      background-color: #fff; /* Set the color of the "hamburger" lines */
+      background-color: #fff;
       margin: 6px auto;
       box-shadow: 0 6px 0 #fff, 0 12px 0 #fff; /* Create 3 lines */
   }
 
 
-    /* Add a blur effect to the body when the navbar is toggled */
+  /* Blur effect to the body when the navbar is toggled */
   body.navbar-open {
-    filter: blur(5px); /* Apply a blur effect */
-    pointer-events: none; /* Disable interactions with the blurred content */
+    filter: blur(5px);
   }
 
   .body-content{
@@ -244,6 +243,7 @@ body {
     margin-bottom: 20px;
 }
 
+ /* the widget styling is here */
 .media{
   width:418px;
   height:210px;
@@ -271,6 +271,7 @@ body {
     margin-right: 20%;
 }
 
+
 footer{
   display:flex;
   justify-content:center;
@@ -285,8 +286,21 @@ footer{
   text-shadow: 2px 2px 4px #011638;
 }
 
-.profile-img{
+/* these two stylings for the post image are not working, why? */
+.post-image{
+  width:100%;
+  height:100%;
+  border-radius:1em;
+  background-color:#9055A2;
+}
 
+.card-image {
+  width: 100%;
+  height: 100px;
+  border-radius: 1em;
+  border:none;
+  margin-bottom: 10px;
+  padding:1em;
 }
 
 .sidebar {
