--- a/flaskblog/templates/create_posts.html
+++ b/flaskblog/templates/create_posts.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
     <div>
-        <form method="POST" action="">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{form.hidden_tag()}}
             <fieldset class = 'form-group'>
                 <legend class="border-bottom mb-4">
@@ -34,6 +34,15 @@
                     {% endif %}
                 </div>
             </fieldset>
+            <div class="form-group">
+                {{ form.image.label(class="form-control-label") }}
+                {{ form.image(class="form-control-file") }}
+                {% if form.image.errors %}
+                    {% for error in form.image.errors %}
+                        <span class="text-danger">{{ error }}</span><br>
+                    {% endfor %}
+                {% endif %}
+            </div>
         <div class="form-group">
             {{form.submit(class="btn btn-outline-info")}}
         </div>
