--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,6 +1,7 @@
 
 {% extends 'layout.html' %}
 {% block content %}
+<!-- Looping through the posts of the current page -->
     {% for post in posts.items%}
       <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
@@ -9,6 +10,9 @@
               <a class="mr-2" href="{{url_for('user_posts', username=post.author.username)}}">{{ post.author.username }}</a>
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
             </div>
+            {% if post.image_file %}
+            <img src="{{ url_for('static', filename='post_images/' + post.image_file) }}" alt="{{ post.title}}" class="card-image">
+            {% endif %}
             <h3><a class="article-title" href="{{ url_for('post', post_id=post.id)}}">{{ post.title }}</a></h3>
             <p class="article-content">{{ post.content }}</p>
           </div>
@@ -28,6 +32,13 @@
           <span class="btn btn-outline-secondary mb-4">...</span>
         {% endif %}
       {% endfor %}
+  </div>
+  <div class="search">
+    <form action="{{ url_for('search') }}" method="GET" class="search-form">
+      <input type="text" name="query" placeholder="Search..." required>
+      <button type="submit">Search</button>
+    </form>
+
   </div>
 
 {% endblock %}
