--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,7 +1,7 @@
 
 {% extends 'layout.html' %}
 {% block content %}
-    <h1>Posts</h1>
+    <h3>Posts</h3>
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + posts.author.image_file) }}">
         <div class="">
@@ -11,9 +11,15 @@
             </div>
             <h2><a class="article-title" href="{{ url_for('post', post_id=posts.id) }}">{{ posts.title }}</a></h2>
             <p class="article-content">{{ posts.content }}</p>
-            {% if posts.image_file %}
-            <img src="{{ url_for('static', filename='post_images/' + posts.image_file) }}" alt="{{ posts.title }}" class="card-image">
-            {% endif %}
+            <div class="post-image">
+                {% if posts.image_file %}
+                <img src="{{ url_for('static', filename='post_images/' + posts.image_file) }}" alt="{{ posts.title}}" class="card-image">
+                {% endif %}
+            </div>
+            <form action="{{ url_for('add_to_cart', post_id=posts.id) }}" method="POST">
+                <button type="submit">Add to Cart</button>
+            </form>
+
         </div>
     </article>
 {% endblock %}
