--- a/flaskblog/templates/create_posts.html
+++ b/flaskblog/templates/create_posts.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
     <div>
-        <form method="POST" action="" enctype="multipart/form-data">
+        <form method="POST" action="" enctype="multipart/form-data" class="form">
             {{form.hidden_tag()}}
             <fieldset class = 'form-group'>
                 <legend class="border-bottom mb-4">
@@ -35,6 +35,19 @@
                 </div>
             </fieldset>
             <div class="form-group">
+                {{form.price.label(class="form-control-label")}}
+                {% if form.price.errors %}
+                    {{form.price(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {% for error in form.price.errors %}
+                            <span>{{error}}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{form.price(class="form-control form-control-lg")}}
+                {% endif %}
+            </div>
+            <div class="form-group">
                 {{ form.image.label(class="form-control-label") }}
                 {{ form.image(class="form-control-file") }}
                 {% if form.image.errors %}
@@ -43,6 +56,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
+
         <div class="form-group">
             {{form.submit(class="btn btn-outline-info")}}
         </div>
