--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -3,24 +3,37 @@
 {% block content %}
 <!-- Looping through the posts of the current page -->
     {% for post in posts.items%}
-      <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="{{url_for('user_posts', username=post.author.username)}}">{{ post.author.username }}</a>
-              <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
-            </div>
-            <h3><a class="article-title" href="{{ url_for('post', post_id=post.id)}}">{{ post.title }}</a></h3>
-            <div class="post-image">
-              {% if post.image_file %}
-              <img src="{{ url_for('static', filename='post_images/' + post.image_file) }}" alt="{{ post.title}}" class="card-image">
-              {% endif %}
-            </div>
+    <article class="media content-section">
+      <a href="{{ url_for('post', post_id=post.id) }}" class="inner-content-section-link">
+        <div class="inner-content-section">
+          <div class="inner-content-section-metadata">
+            <h5><a class="article-title" href="{{ url_for('post', post_id=post.id)}}">{{ post.title }}</a></h5>
+            <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+              <div class="media-body">
+                <div class="article-metadata">
+                  <a class="mr-2 username" href="{{url_for('user_posts', username=post.author.username)}}">{{ post.author.username }}</a>
+                </div>
+              </div>
           </div>
-      </article>
+          <div class="post-image-container">
+            {% if post.image_file %}
+            <img src="{{ url_for('static', filename='post_images/' + post.image_file) }}" alt="{{ post.title}}" class="card-image">
+            {% endif %}
+          </div>
+        </div>
+      </a>
+    </article>
+
     {% endfor %}
 {% endblock %}
 {% block sidebar %}
+    <div class="search">
+      <form action="{{ url_for('search') }}" method="GET" class="search-form">
+        <input type="text" name="query" placeholder="Book..." required>
+        <button type="submit">Search</button>
+      </form>
+
+    </div>
     <div class="pagination">
       {% for page_num in posts.iter_pages(left_edge=1, left_current=1, right_edge=1, right_current=2) %}
         {% if page_num %}
@@ -34,12 +47,6 @@
         {% endif %}
       {% endfor %}
   </div>
-  <div class="search">
-    <form action="{{ url_for('search') }}" method="GET" class="search-form">
-      <input type="text" name="query" placeholder="Search..." required>
-      <button type="submit">Search</button>
-    </form>
 
-  </div>
 
 {% endblock %}
