--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -32,10 +32,10 @@
                         <a class="nav-item nav-link" href="{{url_for('about')}}">About</a>
                         {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link" href="{{url_for('new_post')}}">New Post</a>
-                        <a class="nav-item nav-link" href="{{url_for('account')}}">Account</a>
                         <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
-                        <img src="{{ url_for('static', filename='profile_pics/' + current_user.image_file) }}" alt="Profile" class="rounded-circle account-img">
-                        {% else %}
+                        <a href="{{ url_for('account') }}">
+                            <img src="{{ url_for('static', filename='profile_pics/' + current_user.image_file) }}" alt="Profile" class="rounded-circle account-img">
+                        </a>                        {% else %}
                             <a class="nav-item nav-link" href="{{url_for('login')}}">Login</a>
                             <a class="nav-item nav-link" href="{{url_for('register')}}">Register</a>
                         {% endif %}
