--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -34,6 +34,19 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
+                    {{form.whatsapp.label(class="form-control-label")}}
+                    {% if form.whatsapp.errors %}
+                        {{form.whatsapp(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.whatsapp.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{form.whatsapp(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="form-group">
                     {{form.password.label(class="form-control-label")}}
                     {% if form.password.errors %}
                         {{form.password(class="form-control form-control-lg is-invalid")}}
