--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,59 +1,71 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <div class="content-section">
-        <div class="">
+    <div class="content-section account-content">
+        <div class="account-header">
             <img class="rounded-circle account-img" id="account-img" src="{{ image_file }}" >
-                <div class="media-body">
-                    <h4 class="account-heading">{{ current_user.username }}</h4>
-                    <p class="text-secondary">{{ current_user.email }}</p>
-                </div>
-        </div>
-            <form method="POST" action="" enctype="multipart/form-data">
-                {{form.hidden_tag()}}
-                <fieldset class = 'form-group'>
-                    <legend class="border-bottom mb-4">
-                        ACCOUNT INFORMATION
-                    </legend>
-                    <div class="form-group">
-                        {{form.username.label(class="form-control-label")}}
-                        {% if form.username.errors %}
-                            {{form.username(class="form-control form-control-lg is-invalid")}}
-                            <div class="invalid-feedback">
-                                {% for error in form.username.errors %}
-                                    <span>{{error}}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{form.username(class="form-control form-control-lg")}}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{form.email.label(class="form-control-label")}}
-                        {% if form.email.errors %}
-                            {{form.email(class="form-control form-control-lg is-invalid")}}
-                            <div class="invalid-feedback">
-                                {% for error in form.email.errors %}
-                                    <span>{{error}}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{form.email(class="form-control form-control-lg")}}
-                        {% endif %}
-                    </div>
-                </fieldset>
-                    <div class="form-group">
-                        {{form.picture.label()}}
-                        {{form.picture(class="form-control-file")}}
-                        {% if form.picture.errors %}
-                            {% for error in form.picture.errors %}
-                            <span class="text-danger">{{error}}</span></div>
-                            {% endfor %}
-                        {% endif %}
-
-                    </div>
-            <div class="form-group">
-                {{form.submit(class="btn btn-outline-info")}}
+            <div class="media-body">
+                <h4 class="account-heading">{{ current_user.username }}</h4>
+                <p class="text-secondary">{{ current_user.email }}</p>
             </div>
-            </form>
+        </div>
+        <form method="POST" action="" enctype="multipart/form-data">
+            {{form.hidden_tag()}}
+            <fieldset class = 'form-group'>
+                <legend class="border-bottom mb-4">
+                    YOUR ACCOUNT INFORMATION
+                </legend>
+                <div class="form-group">
+                    {{form.username.label(class="form-control-label")}}
+                    {% if form.username.errors %}
+                        {{form.username(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{form.username(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{form.email.label(class="form-control-label")}}
+                    {% if form.email.errors %}
+                        {{form.email(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{form.email(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{form.whatsapp.label(class="form-control-label")}}
+                    {% if form.whatsapp.errors %}
+                        {{form.whatsapp(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.whatsapp.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{form.whatsapp(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{form.picture.label()}}
+                {{form.picture(class="form-control-file")}}
+                {% if form.picture.errors %}
+                    {% for error in form.picture.errors %}
+                    <span class="text-danger">{{error}}</span></div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div class="form-group">
+            {{form.submit(class="btn btn-outline-info")}}
+            </div>
+        </form>
     </div>
 {% endblock %}
