--- a/flaskblog/templates/cart.html
+++ b/flaskblog/templates/cart.html
@@ -1,33 +1,47 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2>Your Cart</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Post Title</th>
-            <th>Quantity</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for cart_item in cart_items %}
-        <form action="{{ url_for('add_to_cart', post_id=cart_item.post.id) }}" method="POST">
-            <button type="submit">Add to Cart</button>
-        </form>
-        {% endfor %}
-        {% for item in cart_items %}
-        <tr>
-            <td>{{ item.post.title }}</td>
-            <td>{{ item.quantity }}</td>
-            <td>
-                <form action="{{ url_for('remove_from_cart', item_id=item.id) }}" method="POST">
-                    <button type="submit" class="btn btn-danger">Remove</button>
-                </form>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="cart">
+    <h4>Your Cart</h4>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Post Title</th>
+                <th>Quantity</th>
+                <th>Unit Price</th>
+                <th>Total Price</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <div class="cart-container">
+                <div class="items">
+                    {% for item in cart_items %}
+                    <tr>
+                        <td><h5><a class="article-title" href="{{ url_for('post', post_id=item.post.id)}}">{{ item.post.title }}</a></h5></td>
+                        <td>{{ item.quantity }}</td>
+                        <td>sh. {{ item.post.price }}</td>
+                        <td>sh. {{ item.post.price * item.quantity}}</td>
+                        <td>
+                            <form action="{{ url_for('remove_from_cart', item_id=item.id) }}" method="POST">
+                                <button type="submit" class="btn btn-danger">Remove</button>
+                            </form>
+                        </td>
+                        <td>
+                            <div class="add-item-container">
+                                <form action="{{ url_for('add_to_cart', post_id=item.post.id) }}" method="POST">
+                                    <button type="submit" class=" btn btn-secondary add-item">Add one more</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </div>
+            </div>
+        </tbody>
+    </table>
+    <a href="{{ url_for('home') }}" class="btn btn-secondary continue-shopping">Continue Shopping</a>
 
-<a href="{{ url_for('home') }}" class="btn btn-secondary">Continue Shopping</a>
+</div>
+
+
 {% endblock %}
