--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -28,7 +28,8 @@
         <div class="post-content">
           <p class="post-content">{{ posts.content }}</p>
           <p class="post-price">Charging at only sh. {{ posts.price }}</p>
-          <a href="{{ url_for('add_to_cart', post_id=posts.id) }}" class="btn btn-primary">Add to Cart</a>        </div>
+          <a href="{{ url_for('add_to_cart', post_id=posts.id) }}" class="btn btn-primary">Add to Cart</a>
+        </div>
       </article>
     </div>
 
